[package]
name = "global_cell"
version = "0.1.0"
edition = "2021"
authors = ["Bitfeller"]
description = "A thread-safe, async-friendly global cell implementation built on Tokio primitives"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bitfeller/global_cell"
keywords = ["async", "tokio", "global", "cell", "thread-safe"]
categories = ["asynchronous", "concurrency"]

[dependencies]
parking_lot = "0.12.5"
tokio = { version = "1.47.1", features = ["sync", "rt"] }

[features]
default = ["test-crate"]

test-crate = ["tokio/macros", "tokio/time"]

[profile.release]
lto = "fat"
codegen-units = 1
