[package]
name = "global_cell"
version = "0.2.0"
edition = "2024"
authors = ["Bitfeller"]
description = "A thread-safe, async-friendly, performant global cell alternative built on Rust and Tokio primitives"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Bitfeller/global_cell"
keywords = ["async", "tokio", "global", "cell", "thread-safe"]
categories = ["asynchronous", "concurrency"]

[dependencies]
parking_lot = { version = "0.12.5", default-features = false }
futures-util = { version = "0.3.28", features = ["std"], default-features = false }

tokio = { version = "1.47.1", features = ["rt", "macros", "time", "sync"], default-features = false, optional = true }
futures-executor = "0.3.31"

[features]
default = []
test-crate = ["dep:tokio"]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
